// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utility/driver.js createDriverHash method with data passed and the data is valid returns a hash map of drivers 1`] = `
Object {
  "Alex": Driver {
    "_averageSpeed": 34,
    "_driverName": "Alex",
    "_totalDrivingTime": 1.25,
    "_totalMilesDriven": 42,
    "_trips": Array [
      Trip {
        "_endTime": "13:16",
        "_startTime": "12:01",
        "_totalMilesDriven": 42,
      },
    ],
  },
  "Bob": Driver {
    "_averageSpeed": 0,
    "_driverName": "Bob",
    "_totalDrivingTime": 0,
    "_totalMilesDriven": 0,
    "_trips": Array [],
  },
  "Dan": Driver {
    "_averageSpeed": 47,
    "_driverName": "Dan",
    "_totalDrivingTime": 0.833333333333333,
    "_totalMilesDriven": 39.1,
    "_trips": Array [
      Trip {
        "_endTime": "07:45",
        "_startTime": "07:15",
        "_totalMilesDriven": 17.3,
      },
      Trip {
        "_endTime": "06:32",
        "_startTime": "06:12",
        "_totalMilesDriven": 21.8,
      },
    ],
  },
}
`;

exports[`utility/driver.js getDriversRecordsOutput method returns output of each drivers travel experiences 1`] = `
"Dan: 17.3 miles @ NaN mph
Alex: 42 miles @ NaN mph
Bob: 0 miles
"
`;

exports[`utility/driver.js sortDrivers method returns a list of drivers sorted ascending or descending, by distance, miles, or mph sortDrivers('asc', 'dist') 1`] = `
Array [
  Object {
    "_averageSpeed": 34,
    "_driverName": "Alex",
    "_totalDrivingTime": 1.25,
    "_totalMilesDriven": 42,
    "_trips": Array [
      Object {
        "_endTime": "13:16",
        "_startTime": "12:01",
        "_totalMilesDriven": 42,
      },
    ],
  },
  Object {
    "_averageSpeed": 47,
    "_driverName": "Dan",
    "_totalDrivingTime": 0.833333333333333,
    "_totalMilesDriven": 39.1,
    "_trips": Array [
      Object {
        "_endTime": "07:45",
        "_startTime": "07:15",
        "_totalMilesDriven": 17.3,
      },
      Object {
        "_endTime": "06:32",
        "_startTime": "06:12",
        "_totalMilesDriven": 21.8,
      },
    ],
  },
  Object {
    "_averageSpeed": 0,
    "_driverName": "Bob",
    "_totalDrivingTime": 0,
    "_totalMilesDriven": 0,
    "_trips": Array [],
  },
]
`;

exports[`utility/driver.js sortDrivers method returns a list of drivers sorted ascending or descending, by distance, miles, or mph sortDrivers('desc', 'dist') 1`] = `
Array [
  Object {
    "_averageSpeed": 34,
    "_driverName": "Alex",
    "_totalDrivingTime": 1.25,
    "_totalMilesDriven": 42,
    "_trips": Array [
      Object {
        "_endTime": "13:16",
        "_startTime": "12:01",
        "_totalMilesDriven": 42,
      },
    ],
  },
  Object {
    "_averageSpeed": 47,
    "_driverName": "Dan",
    "_totalDrivingTime": 0.833333333333333,
    "_totalMilesDriven": 39.1,
    "_trips": Array [
      Object {
        "_endTime": "07:45",
        "_startTime": "07:15",
        "_totalMilesDriven": 17.3,
      },
      Object {
        "_endTime": "06:32",
        "_startTime": "06:12",
        "_totalMilesDriven": 21.8,
      },
    ],
  },
  Object {
    "_averageSpeed": 0,
    "_driverName": "Bob",
    "_totalDrivingTime": 0,
    "_totalMilesDriven": 0,
    "_trips": Array [],
  },
]
`;

exports[`utility/driver.js validateDriverRecords method takes a hash table and returns the drivers that meet the criteria 1`] = `Array []`;
